--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -1,6 +1,6 @@
 //fonts
-$primary-font: "Montserrat";
-$secondary-font: "Crimson Text";
+$primary-font: "Dosis";
+$secondary-font: "Lora";
 
 //colors
 $primary-black: #374249;
