--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,3 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Dosis:200,300,500,700');
 
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lora:400,700');
