--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md sticky-top navbar-primary">
   	<div class="container">
-  		<a class="navbar-brand" href="#">Talk.io</a>
+  		<a class="navbar-brand" href="/">Eloqui</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 			<i class="navbar-toggler-icon fa fa-bars" aria-hidden="true"></i>
@@ -8,7 +8,7 @@
 		<div class="collapse navbar-collapse clearfix" id="navbarText">
 			<ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		        <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Features</a>
@@ -17,9 +17,11 @@
 		        <a class="nav-link" href="#">Pricing</a>
 		      </li>
 		    </ul>
-			<span class="navbar-text">
-		      <a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> My Account</a>
-		    </span>
+			<span class="navbar-account">
+				<a href="/signup">Sign Up</a>
+				<a href="#">Login</a>
+		  	<a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> My Account</a>
+			</span>
 		</div>
 	</div>
 </nav>
